<resources>
    <string name="app_name">Smart Lego Kettle</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ChangeSettings">Изменить настройку</string>
    <string name="CreateTea">Заварить чай</string>
    <string name="textview_ip">Введите IP-адрес чайника</string>
    <string name="ConnectTitle">Подключить чайник</string>
    <string name="Connect">Подключить</string>
    <string name="hint_email">Почта:</string>
    <string name="hint_password">Пароль:</string>
    <string name="SignIn">Войти в аккаунт</string>
    <string name="AuthorizationTitlle">Добро пожаловать!</string>
    <string name="SignUp">Нет аккаунта?</string>
    <string name="ResetPassword">Забыли пароль?</string>
    <string name="TeaVariety_1">Черный чай</string>
    <string name="TeaVariety_2">Зеленый чай</string>
    <string name="hint_SettingsTitle">Название настройки</string>
    <string name="ChangeTeaParamTitle">Редактирование настройки</string>
    <string name="DeleteSetting">Удалить настройку</string>
    <string name="UpdateSetting">Обновить настройки</string>
    <string name="CreateSettings">Создать настройку</string>
    <string name="hint_EmailReset">Введите почту:</string>
    <string name="ResetPasswordTitle">Сбросить пароль</string>
    <string name="Reset">Сбросить</string>
    <string name="hint_RepeatPassword">Повторить пароль</string>
    <string name="SignUpTitle">Создайте аккаунт</string>
    <string name="CreateAccount">Создать аккаунт</string>
</resources>